handle token expiry, errorfixes

--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -149,6 +149,22 @@ location /ai/ws/ {
 }
 
 # =====================================================================
+    # CORS-aware 401 handler — used by auth_request locations so that
+# expired-JWT rejections still carry CORS headers.  Without this the
+# browser blocks the 401 response and the frontend only sees a
+# "Network Error" instead of the 401 status code.
+# =====================================================================
+location @cors_unauthorized {
+    internal;
+    add_header 'Access-Control-Allow-Origin' $cors_origin always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-XSRF-TOKEN, X-Requested-With, traceparent, tracestate' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+    default_type application/json;
+    return 401 '{"error":"Unauthorized"}';
+}
+
+# =====================================================================
 # CloudApp Routes
 # =====================================================================
 
@@ -299,6 +315,7 @@ location = /cloudapp/actuator/health {
 # WebSocket endpoint
 location ~ ^/cloudapp/ws {
     auth_request /_auth/cloudapp/header-or-cookie;
+    error_page 401 = @cors_unauthorized;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -339,6 +356,7 @@ location ~ ^/cloudapp/ws {
 location ~ ^/cloudapp/(?!.*(?:user-register|user-login|user-logout|ws)) {
     limit_req zone=api_general burst=20 nodelay;
     auth_request /_auth/cloudapp/header-or-cookie;
+    error_page 401 = @cors_unauthorized;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -403,6 +421,7 @@ location = /petstore/actuator/health {
 location /petstore {
     limit_req zone=api_general burst=20 nodelay;
     auth_request /_auth/cloudapp/header-only;
+    error_page 401 = @cors_unauthorized;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -466,6 +485,7 @@ location = /vehicles/actuator/health {
 location /vehicles {
     limit_req zone=api_general burst=20 nodelay;
     auth_request /_auth/cloudapp/header-only;
+    error_page 401 = @cors_unauthorized;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -505,6 +525,7 @@ location /vehicles {
 location /jiraproxy {
     limit_req zone=api_general burst=10 nodelay;
     auth_request /_auth/cloudapp/header-only;
+    error_page 401 = @cors_unauthorized;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
