--- a/frontend/remote/jira/.env.sample
+++ b/frontend/remote/jira/.env.sample
@@ -1,6 +1,5 @@
-NEXT_PRIVATE_LOCAL_WEBPACK=true
-NEXT_PUBLIC_JIRA_DOMAIN = 'https://xxxx.atlassian.net'
-NEXT_PUBLIC_JIRA_PROJECT_KEY: 'YOURPROJECTKEY'
-NEXT_PUBLIC_JIRA_EMAIL: 'YOUREMAILATJIRA'
-NEXT_PUBLIC_JIRA_API_TOKEN = Y3NhYmFqYWthYmi01dUpTVGd1NDcxTGlSV0E1SDA9REUzRjY4N0M=
-NEXT_PUBLIC_LLM_MODEL = 'qwen3:1.7b'
+# --- Jira Integration (extract token from compose!) -----------------------
+JIRA_DOMAIN=https://your-instance.atlassian.net
+JIRA_API_TOKEN=CHANGE_ME
+JIRA_PROJECT_KEY=PROJ
+JIRA_EMAIL=you@example.com
