--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -172,6 +172,11 @@ location @cors_unauthorized {
 location = /_auth/cloudapp/header-or-cookie {
     internal;
 
+    # Allow service-to-service calls with internal token (e.g. AI orchestration)
+    if ($http_x_internal_auth = "${INTERNAL_SERVICE_TOKEN}") {
+        return 200;
+    }
+
     proxy_pass_request_body off;
     proxy_set_header Content-Length "";
     proxy_method GET;
@@ -190,6 +195,11 @@ location = /_auth/cloudapp/header-or-cookie {
 
 location = /_auth/cloudapp/header-only {
     internal;
+
+    # Allow service-to-service calls with internal token (e.g. AI orchestration)
+    if ($http_x_internal_auth = "${INTERNAL_SERVICE_TOKEN}") {
+        return 200;
+    }
 
     proxy_pass_request_body off;
     proxy_set_header Content-Length "";
