--- a/.github/workflows/nightly-ai-integrations.yml
+++ b/.github/workflows/nightly-ai-integrations.yml
@@ -340,6 +340,8 @@ jobs:
           NIGHTLY_EMBEDDING_MODEL: qwen3-embedding:4b
           NIGHTLY_ENABLE_JIRA_E2E: ${{ steps.jira.outputs.enabled }}
           NIGHTLY_JIRA_PROJECT_KEY: ${{ steps.jira.outputs.project_key }}
+          PW_ADMIN_USERNAME: cloudadmin
+          PW_ADMIN_PASSWORD: cloudy
         run: |
           NODE_PATH=./node_modules npx playwright test \
             nightly-chatllm-ollama.spec.ts \
