expose vehicles-api swagger via nginx and README updates

--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -496,6 +496,41 @@ location = /vehicles/actuator/health {
     proxy_redirect off;
 }
 
+location ~ ^/vehicles/(swagger-ui\.html|swagger-ui/.*|v3/api-docs(?:/.*)?|webjars/.*)$ {
+    limit_req zone=api_general burst=20 nodelay;
+
+    if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' $cors_origin always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With, traceparent, tracestate' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Max-Age' 86400;
+        add_header 'Content-Length' 0;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        return 204;
+    }
+
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Access-Control-Allow-Credentials;
+    proxy_hide_header Access-Control-Allow-Methods;
+    proxy_hide_header Access-Control-Allow-Headers;
+
+    add_header 'Access-Control-Allow-Origin' $cors_origin always;
+    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+    set $vehicles_backend "http://vehicles-api:8880";
+    proxy_pass $vehicles_backend;
+
+    proxy_set_header traceparent $http_traceparent;
+    proxy_set_header tracestate $http_tracestate;
+    proxy_set_header X-Request-ID $request_id_value;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+}
+
 location /vehicles {
     limit_req zone=api_general burst=20 nodelay;
     auth_request /_auth/cloudapp/header-only;
