Standardize cookie auth and make approval identity server-authoritative
- derive approval requester and approver identity from authenticated context
- resume approved workflows as the original requester
- require admin auth for approval management and approval websocket access
- remove active localStorage token dependency from shell and monitor auth flows
- use CloudApp session checks and auth cookies across shell, monitor, and remotes
- scope CloudApp auth cookies for gateway-backed routes
- fix CloudApp security matchers for the /cloudapp context path
- stabilize E2E auth setup by saving cookie state without booting the shell
- stop embedded monitor chat from auto-opening the AI stream websocket on load

--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -544,7 +544,7 @@ location = /petstore/actuator/health {
 
 location /petstore {
     limit_req zone=api_general burst=20 nodelay;
-    auth_request /_auth/cloudapp/header-only;
+    auth_request /_auth/cloudapp/header-or-cookie;
     error_page 401 = @cors_unauthorized;
 
     if ($request_method = 'OPTIONS') {
@@ -643,7 +643,7 @@ location ~ ^/vehicles/(swagger-ui\.html|swagger-ui/.*|v3/api-docs(?:/.*)?|webjar
 
 location /vehicles {
     limit_req zone=api_general burst=20 nodelay;
-    auth_request /_auth/cloudapp/header-only;
+    auth_request /_auth/cloudapp/header-or-cookie;
     error_page 401 = @cors_unauthorized;
 
     if ($request_method = 'OPTIONS') {
@@ -683,7 +683,7 @@ location /vehicles {
 # =====================================================================
 location /jiraproxy {
     limit_req zone=api_general burst=10 nodelay;
-    auth_request /_auth/cloudapp/header-only;
+    auth_request /_auth/cloudapp/header-or-cookie;
     error_page 401 = @cors_unauthorized;
 
     if ($request_method = 'OPTIONS') {
@@ -723,6 +723,8 @@ location /jiraproxy {
 # =====================================================================
 location /mlops-segmentation {
     limit_req zone=api_general burst=10 nodelay;
+    auth_request /_auth/cloudapp/header-or-cookie;
+    error_page 401 = @cors_unauthorized;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
