Add AI orchestration and monitor checks to the PR CI gate
- add AI orchestration pytest job to ci-tests.yml
- add AI monitor CI job for lint and build validation
- include both new jobs in the CI test summary
- add monitor package scripts for typecheck, lint, and vitest
- add ESLint flat config for the AI monitor
- fix monitor TSX/file naming and small lint-safe code cleanup
- add test-ai-monitor-lint to docker-compose.test.yml
- include AI monitor checks in the test-all orchestrator

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -263,6 +263,23 @@ services:
       - ./tests/ai-orchestration-layer:/tests:ro
 
   # =========================================================================
+  # AI ORCHESTRATION MONITOR CHECKS (TypeScript typecheck + lint + build)
+  # =========================================================================
+  test-ai-monitor-lint:
+    image: node:20-slim
+    working_dir: /build
+    entrypoint:
+      [
+        "sh",
+        "-lc",
+        "cp -a /src/. /build/ && rm -rf /build/node_modules /build/package-lock.json && npm install --no-audit --no-fund && npm run lint && npm run build",
+      ]
+    environment:
+      - CI=true
+    volumes:
+      - ./ai-orchestration/ai-orchestration-monitor:/src:ro
+
+  # =========================================================================
   # FRONTEND UNIT TESTS (Jest + React Testing Library)
   # =========================================================================
   test-frontend-unit:
@@ -295,7 +312,7 @@ services:
       [
         "sh",
         "-lc",
-        "set -eu; BASE_PROJECT=portfolio_test_all; PROJECT=$$BASE_PROJECT; SERVICES='test-backend test-backend-petstore test-backend-vehicles test-backend-webproxy test-ml-pipeline test-ai-orchestration-layer test-frontend-unit test-nginx-gateway test-api-contracts test-e2e'; cleanup(){ docker compose -p $$PROJECT -f docker-compose.test.yml down -v --remove-orphans >/dev/null 2>&1 || true; }; trap cleanup EXIT INT TERM; cleanup; for svc in $$SERVICES; do PROJECT=\"$$BASE_PROJECT_$$svc\"; echo ''; echo \"=== Running $$svc ===\"; cleanup; docker compose -p $$PROJECT -f docker-compose.test.yml up --build --force-recreate --abort-on-container-exit $$svc; cleanup; done; PROJECT=$$BASE_PROJECT; trap - EXIT INT TERM; cleanup; echo ''; echo 'All test suites passed.'",
+        "set -eu; BASE_PROJECT=portfolio_test_all; PROJECT=$$BASE_PROJECT; SERVICES='test-backend test-backend-petstore test-backend-vehicles test-backend-webproxy test-ml-pipeline test-ai-orchestration-layer test-ai-monitor-lint test-frontend-unit test-nginx-gateway test-api-contracts test-e2e'; cleanup(){ docker compose -p $$PROJECT -f docker-compose.test.yml down -v --remove-orphans >/dev/null 2>&1 || true; }; trap cleanup EXIT INT TERM; cleanup; for svc in $$SERVICES; do PROJECT=\"$$BASE_PROJECT_$$svc\"; echo ''; echo \"=== Running $$svc ===\"; cleanup; docker compose -p $$PROJECT -f docker-compose.test.yml up --build --force-recreate --abort-on-container-exit $$svc; cleanup; done; PROJECT=$$BASE_PROJECT; trap - EXIT INT TERM; cleanup; echo ''; echo 'All test suites passed.'",
       ]
 
   # =========================================================================
