--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -7,6 +7,8 @@
 #   3. NGINX gateway tests (JWT, CORS, routing)
 #   4. Frontend unit tests (React Testing Library)
 #   5. Playwright E2E tests (full stack)
+#   6. AI Orchestration tests (pytest — auth, config, http_client, approvals)
+#   7. AI Monitor checks (TypeScript typecheck + ESLint + Vite build)
 #
 # Usage:
 #   Triggered automatically on push/PR to main/develop.
@@ -231,7 +233,49 @@ jobs:
         run: docker compose -f docker-compose.test.yml down -v --remove-orphans
 
   # =========================================================================
-  # JOB 6: Playwright E2E Tests
+  # JOB 6: AI Orchestration Layer Tests (pytest)
+  # =========================================================================
+  ai-orchestration-tests:
+    name: "AI Orchestration — pytest"
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run AI orchestration layer tests
+        run: |
+          docker compose -f docker-compose.test.yml up --build --abort-on-container-exit \
+            test-ai-orchestration-layer
+
+      - name: Cleanup
+        if: always()
+        run: docker compose -f docker-compose.test.yml down -v --remove-orphans
+
+  # =========================================================================
+  # JOB 7: AI Monitor Checks (ESLint + Vite Build)
+  # =========================================================================
+  ai-monitor-checks:
+    name: "AI Monitor — Lint + Build"
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run AI monitor checks
+        run: |
+          docker compose -f docker-compose.test.yml up --build --abort-on-container-exit \
+            test-ai-monitor-lint
+
+      - name: Cleanup
+        if: always()
+        run: docker compose -f docker-compose.test.yml down -v --remove-orphans
+
+  # =========================================================================
+  # JOB 8: Playwright E2E Tests
   # =========================================================================
   e2e-tests:
     name: "E2E — Playwright"
@@ -293,7 +337,7 @@ jobs:
   test-summary:
     name: "Test Summary"
     runs-on: ubuntu-latest
-    needs: [backend-tests, ml-pipeline-tests, nginx-gateway-tests, api-contract-tests, frontend-unit-tests, e2e-tests]
+    needs: [backend-tests, ml-pipeline-tests, nginx-gateway-tests, api-contract-tests, frontend-unit-tests, ai-orchestration-tests, ai-monitor-checks, e2e-tests]
     if: always()
 
     steps:
@@ -308,4 +352,6 @@ jobs:
           echo "| NGINX Gateway | ${{ needs.nginx-gateway-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| API Contracts | ${{ needs.api-contract-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Frontend Unit | ${{ needs.frontend-unit-tests.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| AI Orchestration (pytest) | ${{ needs.ai-orchestration-tests.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| AI Monitor (TS + Lint) | ${{ needs.ai-monitor-checks.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Playwright E2E | ${{ needs.e2e-tests.result }} |" >> $GITHUB_STEP_SUMMARY
