--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -6,9 +6,10 @@
 #   2. ML Pipeline tests (Flask/pytest + real Postgres)
 #   3. NGINX gateway tests (JWT, CORS, routing)
 #   4. Frontend unit tests (React Testing Library)
-#   5. Playwright E2E tests (full stack)
-#   6. AI Orchestration tests (pytest — auth, config, http_client, approvals)
-#   7. AI Monitor checks (TypeScript typecheck + ESLint + Vite build)
+#   5. Frontend lockfile native package checks
+#   6. Playwright E2E tests (full stack)
+#   7. AI Orchestration tests (pytest — auth, config, http_client, approvals)
+#   8. AI Monitor checks (TypeScript typecheck + ESLint + Vite build)
 #
 # Usage:
 #   Triggered automatically on push/PR to main/develop.
@@ -233,7 +234,22 @@ jobs:
         run: docker compose -f docker-compose.test.yml down -v --remove-orphans
 
   # =========================================================================
-  # JOB 6: AI Orchestration Layer Tests (pytest)
+  # JOB 6: Frontend Lockfile Native Package Checks
+  # =========================================================================
+  frontend-lockfile-checks:
+    name: "Frontend Lockfiles — Linux Native Packages"
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Validate frontend lockfiles
+        run: python3 scripts/check_frontend_native_lockfiles.py
+
+  # =========================================================================
+  # JOB 7: AI Orchestration Layer Tests (pytest)
   # =========================================================================
   ai-orchestration-tests:
     name: "AI Orchestration — pytest"
@@ -254,7 +270,7 @@ jobs:
         run: docker compose -f docker-compose.test.yml down -v --remove-orphans
 
   # =========================================================================
-  # JOB 7: AI Monitor Checks (ESLint + Vite Build)
+  # JOB 8: AI Monitor Checks (ESLint + Vite Build)
   # =========================================================================
   ai-monitor-checks:
     name: "AI Monitor — Lint + Build"
@@ -275,7 +291,7 @@ jobs:
         run: docker compose -f docker-compose.test.yml down -v --remove-orphans
 
   # =========================================================================
-  # JOB 8: Playwright E2E Tests
+  # JOB 9: Playwright E2E Tests
   # =========================================================================
   e2e-tests:
     name: "E2E — Playwright"
@@ -337,7 +353,7 @@ jobs:
   test-summary:
     name: "Test Summary"
     runs-on: ubuntu-latest
-    needs: [backend-tests, ml-pipeline-tests, nginx-gateway-tests, api-contract-tests, frontend-unit-tests, ai-orchestration-tests, ai-monitor-checks, e2e-tests]
+    needs: [backend-tests, ml-pipeline-tests, nginx-gateway-tests, api-contract-tests, frontend-unit-tests, frontend-lockfile-checks, ai-orchestration-tests, ai-monitor-checks, e2e-tests]
     if: always()
 
     steps:
@@ -352,6 +368,7 @@ jobs:
           echo "| NGINX Gateway | ${{ needs.nginx-gateway-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| API Contracts | ${{ needs.api-contract-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Frontend Unit | ${{ needs.frontend-unit-tests.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Frontend Lockfiles | ${{ needs.frontend-lockfile-checks.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| AI Orchestration (pytest) | ${{ needs.ai-orchestration-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| AI Monitor (TS + Lint) | ${{ needs.ai-monitor-checks.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Playwright E2E | ${{ needs.e2e-tests.result }} |" >> $GITHUB_STEP_SUMMARY
