--- a/frontend/remote/jira/package.json
+++ b/frontend/remote/jira/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf .next; NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 5003",
-    "build": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next build",
-    "start": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next start -p 5003",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
+    "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true next start -p 5003",
     "format": "prettier --write .",
     "lint": "next lint"
   },
@@ -13,34 +13,34 @@
     "@ai-sdk/react": "3.0.67",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@module-federation/nextjs-mf": "8.8.42",
-    "@module-federation/runtime": "0.20.0",
-    "@module-federation/sdk": "0.20.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/x-tree-view": "^8.11.0",
     "ai": "^6.0.27",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "html-to-json-parser": "^2.0.1",
-    "next": "15.5.2",
     "lucide-react": "^0.454.0",
+    "next": "15.3.8",
     "ollama-ai-provider-v2": "^1.2.1",
     "react": "19.1.2",
     "react-dom": "19.1.2",
     "react-markdown": "^10.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "webpack": "^5.89.0",
+    "webpack": "5.99.9",
     "zod": "^4.1.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3",
+    "@module-federation/enhanced": "0.0.0-next-20250618045528",
+    "@module-federation/nextjs-mf": "0.0.0-next-20250618045528",
+    "@module-federation/runtime": "0.0.0-next-20250618045528",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.3.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.8",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "15.3.8",
     "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "typescript": "5.9.2"
   }
 }
