--- a/frontend/remote/moduletemplate/package.json
+++ b/frontend/remote/moduletemplate/package.json
@@ -4,27 +4,29 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf .next; NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 5003",
-    "build": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next build",
-    "start": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next start -p 5003",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
+    "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true next start -p 5003",
     "format": "prettier --write .",
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^8.3.16",
-    "@module-federation/enhanced": "^0.1.15",
-    "@module-federation/runtime": "0.1.15",
-    "next": "^14.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "15.3.8",
+    "react": "19.1.2",
+    "react-dom": "19.1.2",
     "tailwindcss-animate": "^1.0.7",
-    "webpack": "^5.89.0"
+    "webpack": "5.99.9"
   },
   "devDependencies": {
-    "@types/react": "^18.2.47",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.23",
-    "tailwindcss": "3.4.17",
-    "typescript": "^5.3.3"
+    "@eslint/eslintrc": "^3",
+    "@module-federation/enhanced": "0.0.0-next-20250618045528",
+    "@module-federation/nextjs-mf": "0.0.0-next-20250618045528",
+    "@module-federation/runtime": "0.0.0-next-20250618045528",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "24.3.1",
+    "@types/react": "^19.1.8",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "15.3.8",
+    "tailwindcss": "^4",
+    "typescript": "5.9.2"
   }
 }
