--- a/frontend/remote/openmaps/package.json
+++ b/frontend/remote/openmaps/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf .next; NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 5002",
-    "build": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next build",
-    "start": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next start -p 5002",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
+    "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true next start -p 5002",
     "format": "prettier --write .",
     "lint": "next lint",
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "lucide-react": "^0.454.0",
     "next": "15.3.8",
     "next-themes": "^0.4.6",
-    "lucide-react": "^0.454.0",
     "react": "19.1.2",
     "react-dom": "19.1.2",
-    "webpack": "5.99.9",
-    "react-leaflet": "^5.0.0-rc.2"
+    "react-leaflet": "^5.0.0-rc.2",
+    "webpack": "5.99.9"
   },
   "devDependencies": {
     "@module-federation/enhanced": "0.0.0-next-20250618045528",
@@ -29,6 +29,7 @@
     "@types/react": "^19.1.8",
     "cypress": "14.5.4",
     "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.8",
     "tailwindcss": "^4",
     "typescript": "5.9.2"
   }
