--- a/frontend/remote/petstore/package.json
+++ b/frontend/remote/petstore/package.json
@@ -4,37 +4,39 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf .next; NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 5006",
-    "build": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next build",
-    "start": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next start -p 5006",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
+    "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true next start -p 5006",
     "format": "prettier --write .",
     "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/x-data-grid": "^8.11.2",
+    "axios": "^1.2.6",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.454.0",
+    "next": "15.3.8",
+    "next-themes": "^0.4.6",
+    "react": "19.1.2",
+    "react-datepicker": "^8.7.0",
+    "react-dom": "19.1.2",
+    "recharts": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "webpack": "5.99.9"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@module-federation/enhanced": "0.0.0-next-20250618045528",
     "@module-federation/nextjs-mf": "0.0.0-next-20250618045528",
     "@module-federation/runtime": "0.0.0-next-20250618045528",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/x-data-grid": "^6.18.7",
-    "axios": "^1.2.6",
-    "framer-motion": "^10.18.0",
-    "lucide-react": "^0.454.0",
-    "next": "^15.3.8",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-datepicker": "^4.16.0",
-    "recharts": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "webpack": "^5.89.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.47",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.23",
-    "tailwindcss": "3.4.17",
-    "typescript": "^5.3.3"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "24.3.1",
+    "@types/react": "^19.1.8",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "15.3.8",
+    "tailwindcss": "^4",
+    "typescript": "5.9.2"
   }
 }
