Add Flyway schema governance and harden JPA data integrity
- add Flyway to CloudApp and Petstore and move main profiles to ddl-auto=validate
- keep test profiles on create-drop with Flyway disabled for ephemeral integration databases
- replace CloudApp data.sql seeding with Flyway migrations and idempotent item seed data
- remove destructive CascadeType.ALL usage from UserOrder item relationships
- make CloudApp cart/order join tables explicit and indexed
- add selective table indexes for common lookup and join paths in CloudApp and Petstore
- add ID-based equals/hashCode implementations to the JPA entities touched by persistence-sensitive flows
- fix the Note setId naming bug and align entity column/table mappings with the migration schema
- remove unsafe Petstore many-to-many cascade settings and make join/collection tables explicit

Add least-privilege workflow permissions and optional dependency audits

- add top-level GitHub Actions permissions with contents: read
- add a non-blocking dependency scan job to ci-tests.yml
- run npm audit for cloudapp-shell and ai-orchestration-monitor production dependencies
- run pip-audit for ml-pipeline and ai-orchestration-layer requirements
- upload JSON audit reports as workflow artifacts
- include dependency scan results in the CI summary without failing PRs on findings

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -7,9 +7,10 @@
 #   3. NGINX gateway tests (JWT, CORS, routing)
 #   4. Frontend unit tests (React Testing Library)
 #   5. Frontend lockfile native package checks
-#   6. Playwright E2E tests (full stack)
-#   7. AI Orchestration tests (pytest — auth, config, http_client, approvals)
-#   8. AI Monitor checks (TypeScript typecheck + ESLint + Vite build)
+#   6. Optional dependency vulnerability scans (npm audit + pip-audit)
+#   7. Playwright E2E tests (full stack)
+#   8. AI Orchestration tests (pytest — auth, config, http_client, approvals)
+#   9. AI Monitor checks (TypeScript typecheck + ESLint + Vite build)
 #
 # Usage:
 #   Triggered automatically on push/PR to main/develop.
@@ -24,6 +25,9 @@ on:
   pull_request:
     branches: [main, develop]
   workflow_dispatch:
+
+permissions:
+  contents: read
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -249,7 +253,105 @@ jobs:
         run: python3 scripts/check_frontend_native_lockfiles.py
 
   # =========================================================================
-  # JOB 7: AI Orchestration Layer Tests (pytest)
+  # JOB 7: Optional Dependency Scans (non-blocking for findings)
+  # =========================================================================
+  dependency-scans:
+    name: "Dependency Security — Optional Audit"
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    outputs:
+      npm_status: ${{ steps.npm-audit.outputs.status }}
+      python_status: ${{ steps.pip-audit.outputs.status }}
+      summary: ${{ steps.audit-summary.outputs.summary }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Audit npm production dependencies
+        id: npm-audit
+        run: |
+          mkdir -p audit-reports
+          status=clean
+
+          for dir in frontend/cloudapp-shell ai-orchestration/ai-orchestration-monitor; do
+            name="$(basename "$dir")"
+            report="audit-reports/${name}-npm-audit.json"
+            if ! npm audit \
+              --package-lock-only \
+              --omit=dev \
+              --audit-level=high \
+              --json \
+              --prefix "$dir" > "$report"; then
+              status=issues-found
+            fi
+          done
+
+          echo "status=$status" >> "$GITHUB_OUTPUT"
+
+      - name: Install pip-audit
+        run: python3 -m pip install --upgrade pip pip-audit
+
+      - name: Audit Python production dependencies
+        id: pip-audit
+        run: |
+          mkdir -p audit-reports
+          status=clean
+
+          for req in backend/ml-pipeline/requirements.txt ai-orchestration/ai-orchestration-layer/requirements.txt; do
+            name="$(basename "$(dirname "$req")")"
+            report="audit-reports/${name}-pip-audit.json"
+            if ! pip-audit \
+              --requirement "$req" \
+              --format json \
+              --output "$report" \
+              --progress-spinner off; then
+              status=issues-found
+            fi
+          done
+
+          echo "status=$status" >> "$GITHUB_OUTPUT"
+
+      - name: Upload dependency audit reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: dependency-audit-reports
+          path: audit-reports/
+          retention-days: 7
+
+      - name: Summarize optional dependency scans
+        id: audit-summary
+        run: |
+          if [ "${{ steps.npm-audit.outputs.status }}" = "clean" ] && [ "${{ steps.pip-audit.outputs.status }}" = "clean" ]; then
+            summary="clean"
+          else
+            summary="issues-found (non-blocking)"
+          fi
+
+          echo "summary=$summary" >> "$GITHUB_OUTPUT"
+
+          echo "## Optional Dependency Scan" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo "| Ecosystem | Status |" >> "$GITHUB_STEP_SUMMARY"
+          echo "|-----------|--------|" >> "$GITHUB_STEP_SUMMARY"
+          echo "| npm | ${{ steps.npm-audit.outputs.status }} |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| Python | ${{ steps.pip-audit.outputs.status }} |" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo "Reports are uploaded as the \`dependency-audit-reports\` artifact." >> "$GITHUB_STEP_SUMMARY"
+
+  # =========================================================================
+  # JOB 8: AI Orchestration Layer Tests (pytest)
   # =========================================================================
   ai-orchestration-tests:
     name: "AI Orchestration — pytest"
@@ -270,7 +372,7 @@ jobs:
         run: docker compose -f docker-compose.test.yml down -v --remove-orphans
 
   # =========================================================================
-  # JOB 8: AI Monitor Checks (ESLint + Vite Build)
+  # JOB 9: AI Monitor Checks (ESLint + Vite Build)
   # =========================================================================
   ai-monitor-checks:
     name: "AI Monitor — Lint + Build"
@@ -291,7 +393,7 @@ jobs:
         run: docker compose -f docker-compose.test.yml down -v --remove-orphans
 
   # =========================================================================
-  # JOB 9: Playwright E2E Tests
+  # JOB 10: Playwright E2E Tests
   # =========================================================================
   e2e-tests:
     name: "E2E — Playwright"
@@ -353,7 +455,7 @@ jobs:
   test-summary:
     name: "Test Summary"
     runs-on: ubuntu-latest
-    needs: [backend-tests, ml-pipeline-tests, nginx-gateway-tests, api-contract-tests, frontend-unit-tests, frontend-lockfile-checks, ai-orchestration-tests, ai-monitor-checks, e2e-tests]
+    needs: [backend-tests, ml-pipeline-tests, nginx-gateway-tests, api-contract-tests, frontend-unit-tests, frontend-lockfile-checks, dependency-scans, ai-orchestration-tests, ai-monitor-checks, e2e-tests]
     if: always()
 
     steps:
@@ -369,6 +471,7 @@ jobs:
           echo "| API Contracts | ${{ needs.api-contract-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Frontend Unit | ${{ needs.frontend-unit-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Frontend Lockfiles | ${{ needs.frontend-lockfile-checks.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Dependency Scan (optional) | ${{ needs.dependency-scans.outputs.summary }} |" >> $GITHUB_STEP_SUMMARY
           echo "| AI Orchestration (pytest) | ${{ needs.ai-orchestration-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| AI Monitor (TS + Lint) | ${{ needs.ai-monitor-checks.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Playwright E2E | ${{ needs.e2e-tests.result }} |" >> $GITHUB_STEP_SUMMARY
