--- a/backend/cloudapp/src/test/resources/application-test.properties
+++ b/backend/cloudapp/src/test/resources/application-test.properties
@@ -19,6 +19,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.flyway.enabled=false
 
 # --- MongoDB (chat) ---
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://testuser:testpass@${DOCKER_HOST_IP:localhost}:17018/cloudappdb_test?authSource=admin}
