--- a/backend/petstore/src/test/resources/application-test.properties
+++ b/backend/petstore/src/test/resources/application-test.properties
@@ -14,5 +14,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.flyway.enabled=false
 
 management.endpoints.web.exposure.include=health,info
