--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -47,7 +47,9 @@ http {
     # Rate Limiting
     # =========================================================================
     limit_req_zone $binary_remote_addr zone=api_general:10m rate=30r/s;
-    limit_req_zone $binary_remote_addr zone=auth_endpoints:10m rate=5r/s;
+    # Browser auth flows in CI can legitimately burst due to setup/login/logout
+    # helpers plus immediate auth-check requests after navigation.
+    limit_req_zone $binary_remote_addr zone=auth_endpoints:10m rate=20r/s;
     # AI monitor + chat UI can burst aggressively (polling + websocket reconnects + retries),
     # especially in CI. Keep rate limiting, but raise the threshold to avoid false 429s.
     limit_req_zone $binary_remote_addr zone=ai_endpoints:10m rate=60r/s;
