--- a/backend/petstore/pom.xml
+++ b/backend/petstore/pom.xml
@@ -40,6 +40,14 @@
             <version>8.0.33</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
