--- a/backend/petstore/src/main/resources/application.properties
+++ b/backend/petstore/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.datasource.url=jdbc:mysql://${DOCKER_HOST_IP:localhost}:3307/petstore?ser
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
 # FIX 4.9: Expose Prometheus metrics endpoint via Actuator
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
